cmake_minimum_required(VERSION 3.9)

project(leetcode_cpp)

set(CMAKE_CXX_STANDARD 14)
set(BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)

add_subdirectory(problem1)
add_subdirectory(problem2)
add_subdirectory(problem3)
add_subdirectory(problem4)
add_subdirectory(problem5)
add_subdirectory(problem6)
add_subdirectory(problem7)
add_subdirectory(problem8)
add_subdirectory(problem9)
add_subdirectory(problem10)
add_subdirectory(problem11)
add_subdirectory(problem12)
add_subdirectory(problem13)
add_subdirectory(problem14)
add_subdirectory(problem15)

